--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </tr>
   </table>
 <hr />
-  <a href="hobbies.html">My Hobbies</a>
+  <a href="Hobbies.html">My Hobbies</a>
   <p>
     <a href="contact.html">Contact Me</a>
   </p>
